--- a/themes/hugo-notepadium/assets/css/hljs/monokai.css
+++ b/themes/hugo-notepadium/assets/css/hljs/monokai.css
@@ -3,7 +3,7 @@ Monokai style - ported by Luigi Maselli - http://grigio.org
 */
 
 pre {
-  background-color: #272822;
+  background-color: #09121a;
   color: #ddd;
 }
 
