--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -28,60 +28,60 @@
 }
 
 @font-face {
-  font-family: 'Source Code Pro';
+  font-family: 'JetBrains Mono Medium';
   font-style: italic;
   font-weight: 400;
   font-display: swap;
-  src: local('Source Code Pro Italic'), local('SourceCodePro-It'), url(https://fonts.gstatic.com/s/sourcecodepro/v11/HI_QiYsKILxRpg3hIP6sJ7fM7PqlONvUlMc.ttf) format('truetype');
+  src: local('JetBrains Mono Medium Italic'), local('JetBrains-Mono-Medium-Italic'), url(https://download.jetbrains.com/fonts/JetBrainsMono-1.0.3.zip) format('truetype');
 }
 @font-face {
-  font-family: 'Source Code Pro';
+  font-family: 'JetBrains Mono Medium';
   font-style: italic;
   font-weight: 500;
   font-display: swap;
-  src: local('Source Code Pro Medium Italic'), local('SourceCodePro-MediumIt'), url(https://fonts.gstatic.com/s/sourcecodepro/v11/HI_ViYsKILxRpg3hIP6sJ7fM7PqlONMnt9co5mg.ttf) format('truetype');
+  src: local('JetBrains Mono Medium Italic'), local('JetBrains-Mono-Medium-Italic'), url(https://download.jetbrains.com/fonts/JetBrainsMono-1.0.3.zip);
 }
 @font-face {
-  font-family: 'Source Code Pro';
+  font-family: 'JetBrains Mono Medium';
   font-style: italic;
   font-weight: 600;
   font-display: swap;
-  src: local('Source Code Pro SemiBold Italic'), local('SourceCodePro-SemiBoldIt'), url(https://fonts.gstatic.com/s/sourcecodepro/v11/HI_ViYsKILxRpg3hIP6sJ7fM7PqlONMLsNco5mg.ttf) format('truetype');
+  src: local('JetBrains Mono Medium Italic'), local('JetBrains-Mono-Medium-Italic'), url(https://download.jetbrains.com/fonts/JetBrainsMono-1.0.3.zip);
 }
 @font-face {
-  font-family: 'Source Code Pro';
+  font-family: 'JetBrains Mono Medium';
   font-style: italic;
   font-weight: 700;
   font-display: swap;
-  src: local('Source Code Pro Bold Italic'), local('SourceCodePro-BoldIt'), url(https://fonts.gstatic.com/s/sourcecodepro/v11/HI_ViYsKILxRpg3hIP6sJ7fM7PqlONNvsdco5mg.ttf) format('truetype');
+  src: local('JetBrains Mono Medium Bold Italic'), local('JetBrains-Mono-Medium-Bold-Italic'), url(https://download.jetbrains.com/fonts/JetBrainsMono-1.0.3.zip);
 }
 @font-face {
-  font-family: 'Source Code Pro';
+  font-family: 'JetBrains Mono Medium';
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: local('Source Code Pro Regular'), local('SourceCodePro-Regular'), url(https://fonts.gstatic.com/s/sourcecodepro/v11/HI_SiYsKILxRpg3hIP6sJ7fM7PqlPevT.ttf) format('truetype');
+  src: local('JetBrains Mono Medium'), local('JetBrains-Mono-Medium'), url(https://download.jetbrains.com/fonts/JetBrainsMono-1.0.3.zip);
 }
 @font-face {
-  font-family: 'Source Code Pro';
+  font-family: 'JetBrains Mono Medium';
   font-style: normal;
   font-weight: 500;
   font-display: swap;
-  src: local('Source Code Pro Medium'), local('SourceCodePro-Medium'), url(https://fonts.gstatic.com/s/sourcecodepro/v11/HI_XiYsKILxRpg3hIP6sJ7fM7PqtzsjDs-cv.ttf) format('truetype');
+  src: local('JetBrains Mono Medium'), local('JetBrains-Mono-Medium'), url(https://download.jetbrains.com/fonts/JetBrainsMono-1.0.3.zip);
 }
 @font-face {
-  font-family: 'Source Code Pro';
+  font-family: 'JetBrains Mono Medium';
   font-style: normal;
   font-weight: 600;
   font-display: swap;
-  src: local('Source Code Pro SemiBold'), local('SourceCodePro-SemiBold'), url(https://fonts.gstatic.com/s/sourcecodepro/v11/HI_XiYsKILxRpg3hIP6sJ7fM7Pqt4s_Ds-cv.ttf) format('truetype');
+  src: local('JetBrains Mono Medium Bold'), local('JetBrains-Mono-Medium-Bold'), url(https://download.jetbrains.com/fonts/JetBrainsMono-1.0.3.zip);
 }
 @font-face {
-  font-family: 'Source Code Pro';
+  font-family: 'JetBrains Mono Medium';
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: local('Source Code Pro Bold'), local('SourceCodePro-Bold'), url(https://fonts.gstatic.com/s/sourcecodepro/v11/HI_XiYsKILxRpg3hIP6sJ7fM7Pqths7Ds-cv.ttf) format('truetype');
+  src: local('JetBrains Mono Medium Bold'), local('JetBrains-Mono-Medium-Bold'), url(https://download.jetbrains.com/fonts/JetBrainsMono-1.0.3.zip);
 }
 
 html {
@@ -96,6 +96,6 @@ pre,
 tt,
 kbd,
 samp {
-  font-family: 'Source Code Pro', Menlo, Consolas, 'Liberation Mono', monospace;
+  font-family: 'JetBrains Mono Medium', Menlo, Consolas, 'Liberation Mono', monospace;
   font-weight: 500;
 }
